--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ font-family: 'Poppins', sans-serif; */
     min-height: 100vh;
   }
   .container{
-  max-width: 1320px;
+  max-width: 82.5rem;
   margin: 0 auto;
   height: 100vh;
   }
@@ -26,53 +26,53 @@ font-family: 'Poppins', sans-serif; */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 30px 0;
+    padding: 1.875rem 0;
     margin: 0 2.2rem;
   }
   .header img{
-    padding-bottom: 50px;
+    padding-bottom: 3.125rem;
   }
   .main{
     display: flex;
     font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
+    font-size: 1rem;
     color: white;
     font-weight: 400;
 
   }
  .main-img{
-  margin-right: 30px;
+  margin-right: 1.875rem;
  }
   h1{
     font-family: 'Poppins', sans-serif;
-    margin: 20px 0px;
-    font-size: 40px;
+    margin: 1.25rem 0rem;
+    font-size: 2.5rem;
   }
   .textbox-content{
-    padding: 27px;
+    padding: 1.6875rem;
   }
   .textbox-content p{
     line-height: 1.5;
     opacity: .7;
-    padding-bottom: 40px;
+    padding-bottom: 2.5rem;
   }
 .textbox-content a{
   text-decoration: none;
-  padding: 15px 60px;
+  padding: 0.9375rem 3.75rem;
   background-color: white;
-  border-radius: 35px;
+  border-radius: 2.1875rem;
   cursor: pointer;
   font-family: 'Poppins', sans-serif;
 }
 .main a:hover{
   background-color: hsl(300, 69%, 71%);
-  box-shadow: 3px 5px 10px white;
+  box-shadow: 0.1875rem 0.3125rem 0.625rem white;
   color: white;
   transition: 1s ease-in;
 }
 .icons{
   text-align: right;
-  margin-top: 40px;
+  margin-top: 2.5rem;
 }
 .icons a i{
   color: white;
@@ -87,12 +87,12 @@ margin-left: 2rem;
 .icons a i::after{
   content: '';
   position: absolute;
-  height: 41px;
-  width: 41px;
-  border: 2px solid white;
+  height: 2.5625rem;
+  width: 2.5625rem;
+  border: 0.125rem solid white;
   border-radius: 50%;
-  left: -12px;
-  bottom: -11px;
+  left: -0.75rem;
+  bottom: -0.6875rem;
   transition: 1s ease-in;
 }
 
@@ -110,7 +110,7 @@ margin-left: 2rem;
     width: 100%;
   }
 }
-@media screen and (max-width:768px){
+@media screen and (max-width:48rem){
  
   body{
     background-image: url(images/bg-mobile.svg);
@@ -121,18 +121,18 @@ margin-left: 2rem;
  }
  .main a:hover{
   background-color: gold;
-  box-shadow: 3px 5px 10px white;
+  box-shadow: 0.1875rem 0.3125rem 0.625rem white;
   color: hsl(300, 69%, 71%);
   transition: 1s ease-in;
 }
  .icons a i::after{
-  border: 2px solid gold;
+  border: 0.125rem solid gold;
 }
   .icons{
   text-align: center;
 }
 h1{
-  font-size: 26px;
+  font-size: 1.625rem;
 }
 .textbox-content{
   padding: 0;
